# mini-audio-framework

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
cmake_include/: Catch2.cmake
include/maf/core/: AudioBufferView.h  AudioBufferView.tpp  Hello.h  OwnedAudioBuffer.h  OwnedAudioBuffer.tpp
include/maf/realtime/: ScopedNoDenormals.h
include/maf/utils/: Math.h
src/: hello.cpp
src/core/: Hello.cpp
src/realtime/: ScopedNoDenormals.cpp
src/utils/: Math.cpp
tests/core/: AudioBufferViewTests.cpp  HelloTests.cpp  OwnedAudioBufferTests.cpp
tests/realtime/: ScopedNoDenormalsTests.cpp
tests/utils/: MathTests.cpp
